<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.hackerearth.searchbar.views.filters.viewmodel.BarFilterViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp"/>


        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sort"
                style="@style/TextLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_sort"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toTopOf="parent"/>

        <View
                android:id="@+id/divider_top"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sort"/>

        <RadioGroup
                android:id="@+id/rg_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/divider_top">

            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/tv_ascending"
                    style="@style/TextMediumSubHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checkMark="@drawable/bg_selection"
                    android:onClick="@{()->viewModel.onOrderClick(1)}"
                    android:text="@string/label_ascending"/>


            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/tv_descending"
                    style="@style/TextMediumSubHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checkMark="@drawable/bg_selection"
                    android:onClick="@{()->viewModel.onOrderClick(2)}"
                    android:text="@string/label_descending"/>

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_filter"
                style="@style/TextLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_filter"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/rg_order"/>

        <View
                android:id="@+id/divider_bottom"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_filter"/>

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_filter_large"
                style="@style/TextMediumSubHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="@={viewModel.filterData.largeSelection}"
                android:text="@string/label_filter_lager"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/divider_bottom"/>

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_filter_ale"
                style="@style/TextMediumSubHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="@={viewModel.filterData.aleSelection}"
                android:text="@string/label_filter_ale"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/cb_filter_large"/>

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_filter_ape"
                style="@style/TextMediumSubHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="@={viewModel.filterData.ipaSelection}"
                android:text="@string/label_filter_ipa"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/cb_filter_ale"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@color/colorSkyBlue"
                android:onClick="@{()->viewModel.onSubmit()}"
                android:padding="10dp"
                android:text="@string/label_submit"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/cb_filter_ape"/>

        <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>